# napalm-fsos-ssh

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml  dependabot.yaml
.github/workflows/: releases.yml  test.yml
napalm_fsos_ssh/: fsos.py
napalm_fsos_ssh/utils/textfsm_templates/: index  ping.textfsm  show_arp.textfsm  show_interfaces_counters.textfsm  show_ip_interface_brief.textfsm  show_ip_route.textfsm  show_ipv6_interface_brief.textfsm  show_ipv6_neighbors.textfsm  show_ipv6_route.textfsm  show_lldp_neighbor.textfsm  show_lldp_neighbor_interface.textfsm  show_memory.textfsm  show_ntp.textfsm  show_snmp_server.textfsm  show_snmp_server_engine_id.textfsm  show_system.textfsm  show_transceiver.textfsm  show_users.textfsm  show_version.textfsm  show_vlan_all.textfsm  traceroute.textfsm
tests/unit/: TestFsosDriver.py  conftest.py  test_getters.py
tests/unit/mocked_data/test_get_arp_table/normal/: expected_result.json  show_arp.txt
tests/unit/mocked_data/test_get_config/normal/: expected_result.json  show_running_config.txt
tests/unit/mocked_data/test_get_config_filtered/normal/: expected_result.json
tests/unit/mocked_data/test_get_config_sanitized/normal/: expected_result.json
tests/unit/mocked_data/test_get_environment/normal/: expected_result.json  show_memory.txt
tests/unit/mocked_data/test_get_facts/normal/: expected_result.json  show_interfaces_brief.txt  show_system.txt  show_version.txt
tests/unit/mocked_data/test_get_interfaces/normal/: expected_result.json
tests/unit/mocked_data/test_get_users/normal/: show_users.txt  (+1 more)
(+28 files in other folders)
