[tool.poetry]
name = "napalm-fsos-ssh"
version = "0.1.0"
description = "Napalm driver for FSOS through SSH"
authors = ["Ludovic Ortega <ludovic.ortega@adminafk.fr>"]

[tool.poetry.dependencies]
python = "^3.10"
napalm = "^3.4.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
